--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "axios": "^1.6.7",
     "html-to-react": "^1.7.0",
     "next": "14.1.3",
+    "payment": "^2.4.6",
     "react": "^18",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^18"
   },
   "devDependencies": {
