--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/material": "^5.15.14",
     "axios": "^1.6.8",
     "next": "14.1.3",
     "react": "^18",
