--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
   },
   "dependencies": {
     "@mui/material": "^5.15.14",
+    "@stripe/react-stripe-js": "^2.7.0",
+    "stripe" :"13.2.0",
+    "@stripe/stripe-js": "^3.3.0",
     "axios": "^1.6.8",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/node": "20.12.7",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "5.4.5"
   }
 }
