--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "dependencies": {
     "@mui/material": "^5.15.14",
     "@stripe/react-stripe-js": "^2.7.0",
-    "stripe" :"13.2.0",
     "@stripe/stripe-js": "^3.3.0",
     "axios": "^1.6.8",
+    "jspdf": "^2.5.1",
+    "jsreport-client": "^1.2.1",
     "next": "14.1.3",
+    "pdf-lib": "^1.17.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
+    "stripe": "13.2.0"
   },
   "devDependencies": {
+    "@types/jsreport-client": "^1.2.3",
     "@types/node": "20.12.7",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
