--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-to-print": "^2.15.1",
     "stripe": "13.2.0"
   },
   "devDependencies": {
