--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-to-print": "^2.15.1",
-    "stripe": "13.2.0"
+    "stripe": "13.2.0",
+    "use-image": "^1.1.1"
   },
   "devDependencies": {
     "@types/jsreport-client": "^1.2.3",
