--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsreport-client": "^1.2.1",
     "next": "14.1.3",
     "pdf-lib": "^1.17.1",
+    "query-string": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
