--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.51.3",
     "react-to-print": "^2.15.1",
     "stripe": "13.2.0",
+    "sweetalert2": "^11.10.8",
     "use-image": "^1.1.1"
   },
   "devDependencies": {
