--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-to-print": "^2.15.1",
+    "sharp": "^0.33.4",
     "stripe": "13.2.0",
     "sweetalert2": "^11.11.0",
     "use-image": "^1.1.1"
