--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@imgly/background-removal": "^1.5.2",
     "@mui/material": "^5.15.14",
     "@stripe/react-stripe-js": "^2.7.0",
     "@stripe/stripe-js": "^3.3.0",
     "axios": "^1.6.8",
+    "canvas": "^2.11.2",
+    "fabric": "^5.3.0",
+    "jimp": "^0.22.12",
     "jspdf": "^2.5.1",
     "jsreport-client": "^1.2.1",
     "next": "14.1.3",
@@ -28,9 +32,11 @@
     "use-image": "^1.1.1"
   },
   "devDependencies": {
+    "@types/fabric": "^5.3.7",
     "@types/jsreport-client": "^1.2.3",
     "@types/node": "20.12.7",
     "autoprefixer": "^10.0.1",
+    "file-loader": "^6.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "5.4.5"
