--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@mui/material": "^5.15.14",
     "@stripe/react-stripe-js": "^2.7.0",
     "@stripe/stripe-js": "^3.3.0",
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
     "canvas": "^2.11.2",
     "fabric": "^5.3.0",
+    "fs": "^0.0.1-security",
     "jimp": "^0.22.12",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
+    "jsreport-browser-client-dist": "^1.3.0",
     "jsreport-client": "^1.2.1",
     "next": "14.1.3",
     "pdf-lib": "^1.17.1",
@@ -29,13 +32,18 @@
     "sharp": "^0.33.4",
     "stripe": "13.2.0",
     "sweetalert2": "^11.11.0",
-    "use-image": "^1.1.1"
+    "tmp": "^0.2.3",
+    "use-image": "^1.1.1",
+    "uuid": "^9.0.1",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/fabric": "^5.3.7",
     "@types/jsreport-client": "^1.2.3",
     "@types/node": "20.12.7",
+    "@types/tmp": "^0.2.6",
     "autoprefixer": "^10.0.1",
+    "copy-webpack-plugin": "^12.0.2",
     "file-loader": "^6.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
