--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "canvas": "^2.11.2",
     "fabric": "^5.3.0",
     "fs": "^0.0.1-security",
+    "html2canvas": "^1.4.1",
     "jimp": "^0.22.12",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
